--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="de/unierlangen/like/navigation/LoopbackActivity.java" kind="src" path="src"/>
+	<classpathentry excluding="com/tinkerpop/blueprints/pgm/util/graphml/|com/tinkerpop/blueprints/pgm/util/json/|com/tinkerpop/blueprints/pgm/oupls/|com/tinkerpop/blueprints/pgm/impls/event/|com/tinkerpop/blueprints/pgm/impls/readonly/|com/tinkerpop/blueprints/pgm/impls/sail/|com/tinkerpop/blueprints/pgm/impls/wrapped/" kind="src" path="blueprints_src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="output" path="bin"/>
