--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry excluding="com/tinkerpop/blueprints/pgm/util/graphml/|com/tinkerpop/blueprints/pgm/util/json/|com/tinkerpop/blueprints/pgm/oupls/|com/tinkerpop/blueprints/pgm/impls/event/|com/tinkerpop/blueprints/pgm/impls/readonly/|com/tinkerpop/blueprints/pgm/impls/sail/|com/tinkerpop/blueprints/pgm/impls/wrapped/" kind="src" path="blueprints_src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
