--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="de.unierlangen.like" android:versionCode="1"
 	android:versionName="1.0">
+	<uses-sdk android:minSdkVersion="5"
+		android:targetSdkVersion="5" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	<application android:name="NavigationApplication"
 		android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:name=".ui.MainYourLocationActivity"
@@ -24,7 +28,5 @@
 		<activity android:name="de.unierlangen.like.ui.HelpActivity"
 			android:label="@string/help_title" android:theme="@android:style/Theme.Dialog">
 		</activity>
-
 	</application>
-	<uses-sdk android:minSdkVersion="3" />
 </manifest>
