--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,11 +3,12 @@
 	package="de.unierlangen.like" android:versionCode="1"
 	android:versionName="1.0">
 	<uses-sdk android:minSdkVersion="5"
-		android:targetSdkVersion="5" />
+		android:targetSdkVersion="11" />
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	<application android:name="NavigationApplication"
-		android:icon="@drawable/icon" android:label="@string/app_name">
+		android:icon="@drawable/icon" android:label="@string/app_name"
+		android:uiOptions="splitActionBarWhenNarrow">
 		<activity android:name=".ui.MainYourLocationActivity"
 			android:label="@string/app_name">
 			<intent-filter>
