--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,7 @@
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<application android:name="NavigationApplication"
+		android:largeHeap="true"
 		android:icon="@drawable/icon" android:label="@string/app_name"
 		android:uiOptions="splitActionBarWhenNarrow">
 		<activity android:name=".ui.MainYourLocationActivity"
