--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
 		android:targetSdkVersion="11" />
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<application android:name="NavigationApplication"
 		android:icon="@drawable/icon" android:label="@string/app_name"
 		android:uiOptions="splitActionBarWhenNarrow">
