Add Preferences Headers
this closes #18

this is a first pass, they have to be properly sorted

	modified:   AndroidManifest.xml
	modified:   res/menu/menu.xml
	deleted:    res/menu/menu_comm_prefs.xml
	deleted:    res/menu/menu_reader_prefs.xml
	modified:   res/xml/communication_preferences.xml
	new file:   res/xml/preference_headers.xml
	modified:   res/xml/reader_preferences.xml
	modified:   src/de/unierlangen/like/NavigationApplication.java
	renamed:    src/de/unierlangen/like/ui/CommunicationPreferences.java -> src/de/unierlangen/like/preferences/CommunicationPreferencesFragment.java
	new file:   src/de/unierlangen/like/preferences/PreferenceWithHeaders.java
	renamed:    src/de/unierlangen/like/ui/ReaderPreferences.java -> src/de/unierlangen/like/preferences/ReaderPreferencesFragment.java
	new file:   src/de/unierlangen/like/preferences/ReaderRegistersListFragment.java
	renamed:    src/de/unierlangen/like/ui/SeekBarPreference.java -> src/de/unierlangen/like/preferences/SeekBarPreference.java
	renamed:    src/de/unierlangen/like/ui/TestModeActivity.java -> src/de/unierlangen/like/preferences/TestModeFragment.java
	modified:   src/de/unierlangen/like/ui/OptionsMenuActivity.java
	deleted:    src/de/unierlangen/like/ui/ReaderRegistersListActivity.java

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="de.unierlangen.like" android:versionCode="1"
 	android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="5"
+	<uses-sdk android:minSdkVersion="11"
 		android:targetSdkVersion="11" />
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -17,12 +17,9 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".ui.ReaderPreferences"></activity>
-		<activity android:name=".ui.ReaderRegistersListActivity"></activity>
-		<activity android:name=".ui.CommunicationPreferences"></activity>
+		<activity android:name=".preferences.PreferenceWithHeaders"></activity>
 		<activity android:name=".ui.ConsoleActivity"></activity>
 		<activity android:name=".LoopbackActivity"></activity>
-		<activity android:name=".ui.TestModeActivity"></activity>
 		<activity android:name=".ui.FindRoomActivity"></activity>
 		<activity android:name=".ui.AboutActivity" android:label="@string/about_title"
 			android:theme="@android:style/Theme.Dialog">
