--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<application android:name="NavigationApplication"
 		android:largeHeap="true"
-		android:icon="@drawable/icon" android:label="@string/app_name"
+		android:icon="@drawable/app_icon" android:label="@string/app_name"
 		android:uiOptions="splitActionBarWhenNarrow">
 		<activity android:name=".ui.MainYourLocationActivity"
 			android:theme="@style/MainYourLocationActivityStyle"
