--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,8 +23,8 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".preferences.PreferenceWithHeaders">
-        </activity>
+		<activity android:name=".preferences.PreferenceWithHeadersActivity"></activity>
+        <activity android:name=".preferences.SettingsActivity"></activity>
 		<activity android:name=".ui.ConsoleActivity"></activity>
 		<activity android:name=".LoopbackActivity"></activity>
 		<activity android:name=".ui.FindRoomActivity"></activity>
